keep highest val strategy

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
       "running for Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_2_predictions.xlsx and Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx\n",
       "  ticker fixed_quarter_date target pred\n",
       "0   AAPL         2016-07-01     AA   AA\n",
-      "1   ABBV         2015-04-01      A   AA\n",
+      "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
       "4    ABC         2013-07-01      A    A\n",
@@ -601,19 +601,19 @@
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
       "4    ABC         2013-07-01      A    A\n",
-      "model 1 accuracy: 0.6034912718204489\n",
+      "model 1 accuracy: 0.6184538653366584\n",
       "model 2 accuracy: 0.6209476309226932\n",
       "McNemar's Test contingency table:\n",
-      "[[216, 26], [33, 126]]\n",
+      "[[215, 33], [34, 119]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.3621255394916624\n",
-      "statistic   0.8305084745762712\n",
+      "pvalue      0.9027648250246224\n",
+      "statistic   0.014925373134328358\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.43472400072864315\n",
-      "statistic   0.6101694915254238\n",
+      "pvalue      1.0\n",
+      "statistic   0.0\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.43499280512215344\n",
-      "statistic   26.0\n"
+      "pvalue      1.0\n",
+      "statistic   33.0\n"
      ]
     }
    ],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -644,20 +644,20 @@
       "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
-      "4    ABC         2013-07-01      A    A\n",
-      "model 1 accuracy: 0.6259351620947631\n",
-      "model 2 accuracy: 0.6159600997506235\n",
+      "4    ABC         2013-07-01      A  BBB\n",
+      "model 1 accuracy: 0.6234413965087282\n",
+      "model 2 accuracy: 0.6084788029925187\n",
       "McNemar's Test contingency table:\n",
-      "[[220, 31], [27, 123]]\n",
+      "[[222, 28], [22, 129]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.5994262792958636\n",
-      "statistic   0.27586206896551724\n",
+      "pvalue      0.3961439091520741\n",
+      "statistic   0.72\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.6936406217837585\n",
-      "statistic   0.15517241379310345\n",
+      "pvalue      0.47950012218695337\n",
+      "statistic   0.5\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.6940040940761318\n",
-      "statistic   27.0\n"
+      "pvalue      0.47988766169832786\n",
+      "statistic   22.0\n"
      ]
     }
    ],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -689,26 +689,26 @@
       "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
-      "4    ABC         2013-07-01      A    A\n",
+      "4    ABC         2013-07-01      A  BBB\n",
       "  ticker fixed_quarter_date Rating prediction\n",
       "0   AAPL         2016-07-01     AA         AA\n",
       "1   ABBV         2015-04-01      A         AA\n",
       "2   ABBV         2016-04-01      A          A\n",
       "3    ABC         2013-04-01      A          A\n",
       "4    ABC         2013-07-01      A          A\n",
-      "model 1 accuracy: 0.6159600997506235\n",
+      "model 1 accuracy: 0.6084788029925187\n",
       "model 2 accuracy: 0.6234413965087282\n",
       "McNemar's Test contingency table:\n",
-      "[[209, 38], [41, 113]]\n",
+      "[[195, 49], [55, 102]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.7357201366272508\n",
-      "statistic   0.11392405063291139\n",
+      "pvalue      0.5562984612747348\n",
+      "statistic   0.34615384615384615\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.8219655979326043\n",
-      "statistic   0.05063291139240506\n",
+      "pvalue      0.6239284632085246\n",
+      "statistic   0.2403846153846154\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.8221442424521863\n",
-      "statistic   38.0\n"
+      "pvalue      0.624143515844679\n",
+      "statistic   49.0\n"
      ]
     }
    ],
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -732,26 +732,26 @@
       "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
-      "4    ABC         2013-07-01      A    A\n",
+      "4    ABC         2013-07-01      A  BBB\n",
       "  ticker fixed_quarter_date Rating prediction\n",
       "0   AAPL         2016-07-01     AA         AA\n",
       "1   ABBV         2015-04-01      A          A\n",
       "2   ABBV         2016-04-01      A          A\n",
       "3    ABC         2013-04-01      A          A\n",
       "4    ABC         2013-07-01      A          A\n",
-      "model 1 accuracy: 0.6159600997506235\n",
+      "model 1 accuracy: 0.6084788029925187\n",
       "model 2 accuracy: 0.8229426433915212\n",
       "McNemar's Test contingency table:\n",
-      "[[234, 13], [96, 58]]\n",
+      "[[230, 14], [100, 57]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      1.865745065507734e-15\n",
-      "statistic   63.20183486238532\n",
+      "pvalue      7.971438787362077e-16\n",
+      "statistic   64.87719298245614\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      4.024103640207776e-15\n",
-      "statistic   61.68807339449541\n",
+      "pvalue      1.7068280720313444e-15\n",
+      "statistic   63.37719298245614\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      8.303445016382138e-17\n",
-      "statistic   13.0\n"
+      "pvalue      3.487916162229429e-17\n",
+      "statistic   14.0\n"
      ]
     }
    ],
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -785,16 +785,16 @@
       "model 1 accuracy: 0.6209476309226932\n",
       "model 2 accuracy: 0.6234413965087282\n",
       "McNemar's Test contingency table:\n",
-      "[[202, 47], [48, 104]]\n",
+      "[[207, 42], [43, 109]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.9182821610274703\n",
-      "statistic   0.010526315789473684\n",
+      "pvalue      0.9136266610628591\n",
+      "statistic   0.011764705882352941\n",
       "Test results, non-exact, with continuity correction:\n",
       "pvalue      1.0\n",
       "statistic   0.0\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      1.0\n",
-      "statistic   47.0\n"
+      "statistic   42.0\n"
      ]
     }
    ],
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -828,16 +828,16 @@
       "model 1 accuracy: 0.6209476309226932\n",
       "model 2 accuracy: 0.8229426433915212\n",
       "McNemar's Test contingency table:\n",
-      "[[236, 13], [94, 58]]\n",
+      "[[230, 19], [100, 52]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      4.856801898137302e-15\n",
-      "statistic   61.3177570093458\n",
+      "pvalue      1.1256043864769986e-13\n",
+      "statistic   55.134453781512605\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      1.0430760369792842e-14\n",
-      "statistic   59.81308411214953\n",
+      "pvalue      2.2407127165192652e-13\n",
+      "statistic   53.78151260504202\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      2.5812862792321837e-16\n",
-      "statistic   13.0\n"
+      "pvalue      1.814238130955908e-14\n",
+      "statistic   19.0\n"
      ]
     }
    ],
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -861,26 +861,26 @@
       "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
-      "4    ABC         2013-07-01      A    A\n",
+      "4    ABC         2013-07-01      A  BBB\n",
       "  ticker fixed_quarter_date Rating exclude_previous_rating_model_3_predictions\n",
       "0   AAPL         2016-07-01     AA                                          AA\n",
       "1   ABBV         2015-04-01      A                                          AA\n",
       "2   ABBV         2016-04-01      A                                         AAA\n",
       "3    ABC         2013-04-01      A                                           A\n",
       "4    ABC         2013-07-01      A                                           A\n",
-      "model 1 accuracy: 0.6159600997506235\n",
+      "model 1 accuracy: 0.6084788029925187\n",
       "model 2 accuracy: 0.6683291770573566\n",
       "McNemar's Test contingency table:\n",
-      "[[198, 49], [70, 84]]\n",
+      "[[187, 57], [81, 76]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.05422099630917656\n",
-      "statistic   3.7058823529411766\n",
+      "pvalue      0.041050886560458806\n",
+      "statistic   4.173913043478261\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.06674355431693438\n",
-      "statistic   3.361344537815126\n",
+      "pvalue      0.05024291912937802\n",
+      "statistic   3.8333333333333335\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.06629133125279607\n",
-      "statistic   49.0\n"
+      "pvalue      0.049848080809161116\n",
+      "statistic   57.0\n"
      ]
     }
    ],
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -904,26 +904,26 @@
       "1   ABBV         2015-04-01      A    A\n",
       "2   ABBV         2016-04-01      A    A\n",
       "3    ABC         2013-04-01      A  BBB\n",
-      "4    ABC         2013-07-01      A    A\n",
+      "4    ABC         2013-07-01      A  BBB\n",
       "  ticker fixed_quarter_date Rating exclude_previous_rating_model_3_predictions\n",
       "0   AAPL         2016-07-01     AA                                          AA\n",
       "1   ABBV         2015-04-01      A                                           A\n",
       "2   ABBV         2016-04-01      A                                           A\n",
       "3    ABC         2013-04-01      A                                           A\n",
       "4    ABC         2013-07-01      A                                           A\n",
-      "model 1 accuracy: 0.6159600997506235\n",
+      "model 1 accuracy: 0.6084788029925187\n",
       "model 2 accuracy: 0.8927680798004988\n",
       "McNemar's Test contingency table:\n",
-      "[[238, 9], [120, 34]]\n",
+      "[[234, 10], [124, 33]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      1.470251791908585e-22\n",
-      "statistic   95.51162790697674\n",
+      "pvalue      6.985190302200137e-23\n",
+      "statistic   96.98507462686567\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      3.493453580961607e-22\n",
-      "statistic   93.7984496124031\n",
+      "pvalue      1.6435495509062245e-22\n",
+      "statistic   95.2910447761194\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      6.501235288164661e-26\n",
-      "statistic   9.0\n"
+      "pvalue      3.6370082549903253e-26\n",
+      "statistic   10.0\n"
      ]
     }
    ],
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -957,16 +957,16 @@
       "model 1 accuracy: 0.6209476309226932\n",
       "model 2 accuracy: 0.6683291770573566\n",
       "McNemar's Test contingency table:\n",
-      "[[193, 56], [75, 77]]\n",
+      "[[198, 51], [70, 82]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.09690686701850447\n",
-      "statistic   2.7557251908396947\n",
+      "pvalue      0.08411869479791409\n",
+      "statistic   2.9834710743801653\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.11579587487387692\n",
-      "statistic   2.4732824427480917\n",
+      "pvalue      0.10176350495125709\n",
+      "statistic   2.677685950413223\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.1154544882922597\n",
-      "statistic   56.0\n"
+      "pvalue      0.10136765353309206\n",
+      "statistic   51.0\n"
      ]
     }
    ],
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1000,16 +1000,16 @@
       "model 1 accuracy: 0.6209476309226932\n",
       "model 2 accuracy: 0.8927680798004988\n",
       "McNemar's Test contingency table:\n",
-      "[[240, 9], [118, 34]]\n",
+      "[[238, 11], [120, 32]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      3.9583137285950927e-22\n",
-      "statistic   93.55118110236221\n",
+      "pvalue      1.676453772851196e-21\n",
+      "statistic   90.69465648854961\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      9.38559957803573e-22\n",
-      "statistic   91.84251968503936\n",
+      "pvalue      3.87268116596246e-21\n",
+      "statistic   89.0381679389313\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      2.2519524486033766e-25\n",
-      "statistic   9.0\n"
+      "pvalue      2.561478241341199e-24\n",
+      "statistic   11.0\n"
      ]
     }
    ],
