Rerun up to GNN for XGBoost rating change. Slide is also updated

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -143,9 +143,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ijyli\\miniforge3\\envs\\capstone\\Lib\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "C:\\Users\\15527\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  statistic = (np.abs(n1 - n2) - corr)**2 / (1. * (n1 + n2))\n",
-      "c:\\Users\\ijyli\\miniforge3\\envs\\capstone\\Lib\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "C:\\Users\\15527\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  statistic = (np.abs(n1 - n2) - corr)**2 / (1. * (n1 + n2))\n"
      ]
     }
@@ -185,7 +185,7 @@
       "pvalue      0.3070138980338223\n",
       "statistic   1.0434782608695652\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.3490764476262922\n",
+      "pvalue      0.3490764476262923\n",
       "statistic   0.8768115942028986\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      0.34911516637678097\n",
@@ -196,63 +196,6 @@
    "source": [
     "test_models('Logistic Regression/exclude_previous_rating_model_2/exclude_previous_rating_model_2_predictions.xlsx',\n",
     "            'Logistic Regression/exclude_previous_rating_model_3/exclude_previous_rating_model_3_predictions.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running for Logistic Regression/smote_rating_change_model_2/smote_rating_change_model_2_predictions.xlsx and Logistic Regression/smote_rating_change_model_3/smote_rating_change_model_3_predictions.xlsx\n",
-      "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
-      "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
-      "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
-      "2   ABBV         2016-04-01                Same As Last Fixed Quarter Date   \n",
-      "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
-      "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
-      "\n",
-      "   smote_rating_change_model_2_predictions  \n",
-      "0          Same As Last Fixed Quarter Date  \n",
-      "1  Downgrade Since Last Fixed Quarter Date  \n",
-      "2          Same As Last Fixed Quarter Date  \n",
-      "3          Same As Last Fixed Quarter Date  \n",
-      "4          Same As Last Fixed Quarter Date  \n",
-      "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
-      "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
-      "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
-      "2   ABBV         2016-04-01                Same As Last Fixed Quarter Date   \n",
-      "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
-      "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
-      "\n",
-      "   smote_rating_change_model_3_predictions  \n",
-      "0          Same As Last Fixed Quarter Date  \n",
-      "1  Downgrade Since Last Fixed Quarter Date  \n",
-      "2          Same As Last Fixed Quarter Date  \n",
-      "3          Same As Last Fixed Quarter Date  \n",
-      "4          Same As Last Fixed Quarter Date  \n",
-      "model 1 accuracy: 0.7003577817531306\n",
-      "model 2 accuracy: 0.7164579606440071\n",
-      "McNemar's Test contingency table:\n",
-      "[[707, 76], [94, 241]]\n",
-      "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.16742137180281572\n",
-      "statistic   1.9058823529411764\n",
-      "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.19228797711151613\n",
-      "statistic   1.7\n",
-      "Test results, exact, no continuity correction:\n",
-      "pvalue      0.19213646543397744\n",
-      "statistic   76.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_models('Logistic Regression/smote_rating_change_model_2/smote_rating_change_model_2_predictions.xlsx',\n",
-    "            'Logistic Regression/smote_rating_change_model_3/smote_rating_change_model_3_predictions.xlsx')"
    ]
   },
   {
@@ -353,9 +296,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\ijyli\\miniforge3\\envs\\capstone\\Lib\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "C:\\Users\\15527\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  statistic = (np.abs(n1 - n2) - corr)**2 / (1. * (n1 + n2))\n",
-      "c:\\Users\\ijyli\\miniforge3\\envs\\capstone\\Lib\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "C:\\Users\\15527\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.12_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python312\\site-packages\\statsmodels\\stats\\contingency_tables.py:1348: RuntimeWarning: divide by zero encountered in scalar divide\n",
       "  statistic = (np.abs(n1 - n2) - corr)**2 / (1. * (n1 + n2))\n"
      ]
     }
@@ -395,7 +338,7 @@
       "pvalue      2.5070476423857516e-29\n",
       "statistic   126.40512820512821\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      5.629168852358394e-29\n",
+      "pvalue      5.629168852358395e-29\n",
       "statistic   124.8\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      4.7996549529545174e-33\n",
@@ -406,63 +349,6 @@
    "source": [
     "test_models('XGBoost/exclude_previous_rating_model_2/exclude_previous_rating_model_2_predictions.xlsx',\n",
     "            'XGBoost/exclude_previous_rating_model_3/exclude_previous_rating_model_3_predictions.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "running for XGBoost/rating_change_model_2/rating_change_model_2_predictions.xlsx and XGBoost/rating_change_model_3/rating_change_model_3_predictions.xlsx\n",
-      "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
-      "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
-      "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
-      "2   ABBV         2016-04-01                Same As Last Fixed Quarter Date   \n",
-      "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
-      "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
-      "\n",
-      "  rating_change_model_2_predictions  \n",
-      "0   Same As Last Fixed Quarter Date  \n",
-      "1   Same As Last Fixed Quarter Date  \n",
-      "2   Same As Last Fixed Quarter Date  \n",
-      "3   Same As Last Fixed Quarter Date  \n",
-      "4   Same As Last Fixed Quarter Date  \n",
-      "  ticker fixed_quarter_date Change Direction Since Last Fixed Quarter Date  \\\n",
-      "0   AAPL         2016-07-01                Same As Last Fixed Quarter Date   \n",
-      "1   ABBV         2015-04-01                Same As Last Fixed Quarter Date   \n",
-      "2   ABBV         2016-04-01                Same As Last Fixed Quarter Date   \n",
-      "3    ABC         2012-04-01                Same As Last Fixed Quarter Date   \n",
-      "4    ABC         2013-01-01                Same As Last Fixed Quarter Date   \n",
-      "\n",
-      "  rating_change_model_3_predictions  \n",
-      "0   Same As Last Fixed Quarter Date  \n",
-      "1   Same As Last Fixed Quarter Date  \n",
-      "2   Same As Last Fixed Quarter Date  \n",
-      "3   Same As Last Fixed Quarter Date  \n",
-      "4   Same As Last Fixed Quarter Date  \n",
-      "model 1 accuracy: 0.9516994633273703\n",
-      "model 2 accuracy: 0.9534883720930233\n",
-      "McNemar's Test contingency table:\n",
-      "[[1064, 0], [2, 52]]\n",
-      "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.15729920705028105\n",
-      "statistic   2.0\n",
-      "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.47950012218695337\n",
-      "statistic   0.5\n",
-      "Test results, exact, no continuity correction:\n",
-      "pvalue      0.5\n",
-      "statistic   0.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_models('XGBoost/rating_change_model_2/rating_change_model_2_predictions.xlsx',\n",
-    "            'XGBoost/rating_change_model_3/rating_change_model_3_predictions.xlsx')"
    ]
   },
   {
@@ -501,18 +387,18 @@
       "2         Same As Last Fixed Quarter Date  \n",
       "3         Same As Last Fixed Quarter Date  \n",
       "4         Same As Last Fixed Quarter Date  \n",
-      "model 1 accuracy: 0.945438282647585\n",
+      "model 1 accuracy: 0.943649373881932\n",
       "model 2 accuracy: 0.9490161001788909\n",
       "McNemar's Test contingency table:\n",
-      "[[1055, 2], [6, 55]]\n",
+      "[[1053, 2], [8, 55]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.15729920705028105\n",
-      "statistic   2.0\n",
+      "pvalue      0.05777957112359715\n",
+      "statistic   3.6\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.2888443663464818\n",
-      "statistic   1.125\n",
+      "pvalue      0.11384629800665763\n",
+      "statistic   2.5\n",
       "Test results, exact, no continuity correction:\n",
-      "pvalue      0.2890625\n",
+      "pvalue      0.109375\n",
       "statistic   2.0\n"
      ]
     }
@@ -683,7 +569,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "running for Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx and Graph Neural Network/Other Classifiers on GNN Data/lr_retrain_predictions.xlsx\n",
+      "running for Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx and Graph Neural Network/Other Classifiers on GNN Data/lr_retrain_predictions.xlsx\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  ticker fixed_quarter_date target pred\n",
       "0   AAPL         2016-07-01     AA   AA\n",
       "1   ABBV         2015-04-01      A    A\n",
@@ -704,7 +596,7 @@
       "pvalue      0.5562984612747348\n",
       "statistic   0.34615384615384615\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.6239284632085246\n",
+      "pvalue      0.6239284632085247\n",
       "statistic   0.2403846153846154\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      0.624143515844679\n",
@@ -833,7 +725,7 @@
       "pvalue      1.1256043864769986e-13\n",
       "statistic   55.134453781512605\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      2.2407127165192652e-13\n",
+      "pvalue      2.2407127165192654e-13\n",
       "statistic   53.78151260504202\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      1.814238130955908e-14\n",
@@ -959,10 +851,10 @@
       "McNemar's Test contingency table:\n",
       "[[198, 51], [70, 82]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      0.08411869479791409\n",
+      "pvalue      0.08411869479791408\n",
       "statistic   2.9834710743801653\n",
       "Test results, non-exact, with continuity correction:\n",
-      "pvalue      0.10176350495125709\n",
+      "pvalue      0.10176350495125712\n",
       "statistic   2.677685950413223\n",
       "Test results, exact, no continuity correction:\n",
       "pvalue      0.10136765353309206\n",
@@ -1002,7 +894,7 @@
       "McNemar's Test contingency table:\n",
       "[[238, 11], [120, 32]]\n",
       "Test results, non-exact, no continuity correction:\n",
-      "pvalue      1.676453772851196e-21\n",
+      "pvalue      1.6764537728511963e-21\n",
       "statistic   90.69465648854961\n",
       "Test results, non-exact, with continuity correction:\n",
       "pvalue      3.87268116596246e-21\n",
@@ -1035,7 +927,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
