--- a/Output/Modelling/Graph Neural Network/learnable_net_stats.tex
+++ b/Output/Modelling/Graph Neural Network/learnable_net_stats.tex
@@ -29,3 +29,21 @@
 \renewcommand{\averageDegree}{1.8}
 \renewcommand{\numEdges}{1,805}
 \newcommand{\numClasses}{8}
+\renewcommand{\numTrainNodes}{3,849}
+\renewcommand{\numTestNodes}{980}
+\renewcommand{\numNodes}{4,829}
+\renewcommand{\averageDegree}{5.02}
+\renewcommand{\numEdges}{12,922}
+\renewcommand{\numClasses}{9}
+\renewcommand{\numTrainNodes}{3,849}
+\renewcommand{\numTestNodes}{980}
+\renewcommand{\numNodes}{4,829}
+\renewcommand{\averageDegree}{5.02}
+\renewcommand{\numEdges}{12,922}
+\renewcommand{\numClasses}{9}
+\renewcommand{\numTrainNodes}{3,849}
+\renewcommand{\numTestNodes}{980}
+\renewcommand{\numNodes}{4,829}
+\renewcommand{\averageDegree}{5.02}
+\renewcommand{\numEdges}{12,922}
+\newcommand{\gnnNumClasses}{9}
