--- a/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
+++ b/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
@@ -27,3 +27,7 @@
 \renewcommand{\retrainXGBAccuracy}{0.8229}
 \renewcommand{\pretrainedLRAccuracy}{0.6683}
 \renewcommand{\pretrainedXGBAccuracy}{0.8928}
+\renewcommand{\retrainLRAccuracy}{0.6398}
+\renewcommand{\retrainXGBAccuracy}{0.9031}
+\renewcommand{\pretrainedLRAccuracy}{0.6469}
+\renewcommand{\pretrainedXGBAccuracy}{0.9071}
