transductive versus inductive

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -557,12 +557,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### GNN and Other Classifiers"
+    "## Transductive versus Inductive"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running for Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_2_predictions.xlsx and Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_2_predictions.xlsx\n",
+      "  ticker fixed_quarter_date target pred\n",
+      "0   AAPL         2016-07-01     AA   AA\n",
+      "1   ABBV         2015-04-01      A   AA\n",
+      "2   ABBV         2016-04-01      A    A\n",
+      "3    ABC         2012-04-01      A    A\n",
+      "4    ABC         2013-01-01      A  BBB\n",
+      "  ticker fixed_quarter_date target pred\n",
+      "0   AAPL         2016-07-01     AA   AA\n",
+      "1   ABBV         2015-04-01      A    A\n",
+      "2   ABBV         2016-04-01      A    A\n",
+      "3    ABC         2012-04-01      A    A\n",
+      "4    ABC         2013-01-01      A  BBB\n",
+      "model 1 accuracy: 0.6632653061224489\n",
+      "model 2 accuracy: 0.6653061224489796\n",
+      "McNemar's Test contingency table:\n",
+      "[[605, 45], [47, 283]]\n",
+      "Test results, non-exact, no continuity correction:\n",
+      "pvalue      0.8348273291852392\n",
+      "statistic   0.043478260869565216\n",
+      "Test results, non-exact, with continuity correction:\n",
+      "pvalue      0.9169652366288644\n",
+      "statistic   0.010869565217391304\n",
+      "Test results, exact, no continuity correction:\n",
+      "pvalue      0.9170405196524722\n",
+      "statistic   45.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test models\n",
+    "test_models('Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_2_predictions.xlsx',\n",
+    "            'Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_2_predictions.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running for Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx and Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx\n",
+      "  ticker fixed_quarter_date target pred\n",
+      "0   AAPL         2016-07-01     AA   AA\n",
+      "1   ABBV         2015-04-01      A   AA\n",
+      "2   ABBV         2016-04-01      A    A\n",
+      "3    ABC         2012-04-01      A    A\n",
+      "4    ABC         2013-01-01      A    A\n",
+      "  ticker fixed_quarter_date target pred\n",
+      "0   AAPL         2016-07-01     AA   AA\n",
+      "1   ABBV         2015-04-01      A    A\n",
+      "2   ABBV         2016-04-01      A    A\n",
+      "3    ABC         2012-04-01      A    A\n",
+      "4    ABC         2013-01-01      A  BBB\n",
+      "model 1 accuracy: 0.676530612244898\n",
+      "model 2 accuracy: 0.6836734693877551\n",
+      "McNemar's Test contingency table:\n",
+      "[[617, 46], [53, 264]]\n",
+      "Test results, non-exact, no continuity correction:\n",
+      "pvalue      0.48172771631662636\n",
+      "statistic   0.494949494949495\n",
+      "Test results, non-exact, with continuity correction:\n",
+      "pvalue      0.5464935954065822\n",
+      "statistic   0.36363636363636365\n",
+      "Test results, exact, no continuity correction:\n",
+      "pvalue      0.5467134835988127\n",
+      "statistic   46.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test models\n",
+    "test_models('Graph Neural Network/Transductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx',\n",
+    "            'Graph Neural Network/Inductive/reformatted_exclude_previous_rating_model_3_predictions.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GNN and Other Classifiers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
