--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Transductive versus Inductive"
+    "#### Transductive versus Inductive"
    ]
   },
   {
